parser.output
State 28 conflicts: 4 shift/reduce
State 33 conflicts: 4 shift/reduce
State 34 conflicts: 4 shift/reduce
State 35 conflicts: 4 shift/reduce
State 36 conflicts: 4 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program stmt

    3 stmt: declaration
    4     | expr_stmt

    5 declaration: type varlist SEMI

    6 type: INT
    7     | FLOAT
    8     | CHAR
    9     | DOUBLE

   10 varlist: var_decl
   11        | varlist ',' var_decl

   12 var_decl: IDENT
   13         | IDENT ASSIGN expr

   14 expr_stmt: expr SEMI

   15 expr: IDENT ASSIGN expr
   16     | expr PLUS expr
   17     | expr MINUS expr
   18     | expr MUL expr
   19     | expr DIV expr
   20     | factor

   21 factor: IDENT
   22       | INT_CONST
   23       | FLOAT_CONST
   24       | LPAREN expr RPAREN
   25       | UNKNOWN


Terminals, with rules where they appear

    $end (0) 0
    ',' (44) 11
    error (256)
    INT <str> (258) 6
    FLOAT <str> (259) 7
    CHAR <str> (260) 8
    IDENT <str> (261) 12 13 15 21
    INT_CONST <intval> (262) 22
    FLOAT_CONST <intval> (263) 23
    ASSIGN (264) 13 15
    SEMI (265) 5 14
    LPAREN (266) 24
    RPAREN (267) 24
    PLUS (268) 16
    MINUS (269) 17
    MUL (270) 18
    DIV (271) 19
    UNKNOWN <str> (272) 25
    DOUBLE <str> (273) 9


Nonterminals, with rules where they appear

    $accept (20)
        on left: 0
    program (21)
        on left: 1 2
        on right: 0 2
    stmt (22)
        on left: 3 4
        on right: 2
    declaration <str> (23)
        on left: 5
        on right: 3
    type <str> (24)
        on left: 6 7 8 9
        on right: 5
    varlist <str> (25)
        on left: 10 11
        on right: 5 11
    var_decl <str> (26)
        on left: 12 13
        on right: 10 11
    expr_stmt (27)
        on left: 14
        on right: 4
    expr <str> (28)
        on left: 15 16 17 18 19 20
        on right: 13 14 15 16 17 18 19 24
    factor <str> (29)
        on left: 21 22 23 24 25
        on right: 20


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • stmt

    $end         shift, and go to state 2
    INT          shift, and go to state 3
    FLOAT        shift, and go to state 4
    CHAR         shift, and go to state 5
    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10
    DOUBLE       shift, and go to state 11

    stmt         go to state 12
    declaration  go to state 13
    type         go to state 14
    expr_stmt    go to state 15
    expr         go to state 16
    factor       go to state 17


State 2

    0 $accept: program $end •

    $default  accept


State 3

    6 type: INT •

    $default  reduce using rule 6 (type)


State 4

    7 type: FLOAT •

    $default  reduce using rule 7 (type)


State 5

    8 type: CHAR •

    $default  reduce using rule 8 (type)


State 6

   15 expr: IDENT • ASSIGN expr
   21 factor: IDENT •

    ASSIGN  shift, and go to state 18

    $default  reduce using rule 21 (factor)


State 7

   22 factor: INT_CONST •

    $default  reduce using rule 22 (factor)


State 8

   23 factor: FLOAT_CONST •

    $default  reduce using rule 23 (factor)


State 9

   24 factor: LPAREN • expr RPAREN

    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10

    expr    go to state 19
    factor  go to state 17


State 10

   25 factor: UNKNOWN •

    $default  reduce using rule 25 (factor)


State 11

    9 type: DOUBLE •

    $default  reduce using rule 9 (type)


State 12

    2 program: program stmt •

    $default  reduce using rule 2 (program)


State 13

    3 stmt: declaration •

    $default  reduce using rule 3 (stmt)


State 14

    5 declaration: type • varlist SEMI

    IDENT  shift, and go to state 20

    varlist   go to state 21
    var_decl  go to state 22


State 15

    4 stmt: expr_stmt •

    $default  reduce using rule 4 (stmt)


State 16

   14 expr_stmt: expr • SEMI
   16 expr: expr • PLUS expr
   17     | expr • MINUS expr
   18     | expr • MUL expr
   19     | expr • DIV expr

    SEMI   shift, and go to state 23
    PLUS   shift, and go to state 24
    MINUS  shift, and go to state 25
    MUL    shift, and go to state 26
    DIV    shift, and go to state 27


State 17

   20 expr: factor •

    $default  reduce using rule 20 (expr)


State 18

   15 expr: IDENT ASSIGN • expr

    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10

    expr    go to state 28
    factor  go to state 17


State 19

   16 expr: expr • PLUS expr
   17     | expr • MINUS expr
   18     | expr • MUL expr
   19     | expr • DIV expr
   24 factor: LPAREN expr • RPAREN

    RPAREN  shift, and go to state 29
    PLUS    shift, and go to state 24
    MINUS   shift, and go to state 25
    MUL     shift, and go to state 26
    DIV     shift, and go to state 27


State 20

   12 var_decl: IDENT •
   13         | IDENT • ASSIGN expr

    ASSIGN  shift, and go to state 30

    $default  reduce using rule 12 (var_decl)


State 21

    5 declaration: type varlist • SEMI
   11 varlist: varlist • ',' var_decl

    SEMI  shift, and go to state 31
    ','   shift, and go to state 32


State 22

   10 varlist: var_decl •

    $default  reduce using rule 10 (varlist)


State 23

   14 expr_stmt: expr SEMI •

    $default  reduce using rule 14 (expr_stmt)


State 24

   16 expr: expr PLUS • expr

    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10

    expr    go to state 33
    factor  go to state 17


State 25

   17 expr: expr MINUS • expr

    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10

    expr    go to state 34
    factor  go to state 17


State 26

   18 expr: expr MUL • expr

    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10

    expr    go to state 35
    factor  go to state 17


State 27

   19 expr: expr DIV • expr

    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10

    expr    go to state 36
    factor  go to state 17


State 28

   15 expr: IDENT ASSIGN expr •
   16     | expr • PLUS expr
   17     | expr • MINUS expr
   18     | expr • MUL expr
   19     | expr • DIV expr

    PLUS   shift, and go to state 24
    MINUS  shift, and go to state 25
    MUL    shift, and go to state 26
    DIV    shift, and go to state 27

    PLUS      [reduce using rule 15 (expr)]
    MINUS     [reduce using rule 15 (expr)]
    MUL       [reduce using rule 15 (expr)]
    DIV       [reduce using rule 15 (expr)]
    $default  reduce using rule 15 (expr)


State 29

   24 factor: LPAREN expr RPAREN •

    $default  reduce using rule 24 (factor)


State 30

   13 var_decl: IDENT ASSIGN • expr

    IDENT        shift, and go to state 6
    INT_CONST    shift, and go to state 7
    FLOAT_CONST  shift, and go to state 8
    LPAREN       shift, and go to state 9
    UNKNOWN      shift, and go to state 10

    expr    go to state 37
    factor  go to state 17


State 31

    5 declaration: type varlist SEMI •

    $default  reduce using rule 5 (declaration)


State 32

   11 varlist: varlist ',' • var_decl

    IDENT  shift, and go to state 20

    var_decl  go to state 38


State 33

   16 expr: expr • PLUS expr
   16     | expr PLUS expr •
   17     | expr • MINUS expr
   18     | expr • MUL expr
   19     | expr • DIV expr

    PLUS   shift, and go to state 24
    MINUS  shift, and go to state 25
    MUL    shift, and go to state 26
    DIV    shift, and go to state 27

    PLUS      [reduce using rule 16 (expr)]
    MINUS     [reduce using rule 16 (expr)]
    MUL       [reduce using rule 16 (expr)]
    DIV       [reduce using rule 16 (expr)]
    $default  reduce using rule 16 (expr)


State 34

   16 expr: expr • PLUS expr
   17     | expr • MINUS expr
   17     | expr MINUS expr •
   18     | expr • MUL expr
   19     | expr • DIV expr

    PLUS   shift, and go to state 24
    MINUS  shift, and go to state 25
    MUL    shift, and go to state 26
    DIV    shift, and go to state 27

    PLUS      [reduce using rule 17 (expr)]
    MINUS     [reduce using rule 17 (expr)]
    MUL       [reduce using rule 17 (expr)]
    DIV       [reduce using rule 17 (expr)]
    $default  reduce using rule 17 (expr)


State 35

   16 expr: expr • PLUS expr
   17     | expr • MINUS expr
   18     | expr • MUL expr
   18     | expr MUL expr •
   19     | expr • DIV expr

    PLUS   shift, and go to state 24
    MINUS  shift, and go to state 25
    MUL    shift, and go to state 26
    DIV    shift, and go to state 27

    PLUS      [reduce using rule 18 (expr)]
    MINUS     [reduce using rule 18 (expr)]
    MUL       [reduce using rule 18 (expr)]
    DIV       [reduce using rule 18 (expr)]
    $default  reduce using rule 18 (expr)


State 36

   16 expr: expr • PLUS expr
   17     | expr • MINUS expr
   18     | expr • MUL expr
   19     | expr • DIV expr
   19     | expr DIV expr •

    PLUS   shift, and go to state 24
    MINUS  shift, and go to state 25
    MUL    shift, and go to state 26
    DIV    shift, and go to state 27

    PLUS      [reduce using rule 19 (expr)]
    MINUS     [reduce using rule 19 (expr)]
    MUL       [reduce using rule 19 (expr)]
    DIV       [reduce using rule 19 (expr)]
    $default  reduce using rule 19 (expr)


State 37

   13 var_decl: IDENT ASSIGN expr •
   16 expr: expr • PLUS expr
   17     | expr • MINUS expr
   18     | expr • MUL expr
   19     | expr • DIV expr

    PLUS   shift, and go to state 24
    MINUS  shift, and go to state 25
    MUL    shift, and go to state 26
    DIV    shift, and go to state 27

    $default  reduce using rule 13 (var_decl)


State 38

   11 varlist: varlist ',' var_decl •

    $default  reduce using rule 11 (varlist)
